(library
 (public_name yyocamlc.poetry)
 (name poetry)
 (modules
  rhyme_types
  rhyme_helpers
  rhyme_data
  rhyme_database
  rhyme_matching
  rhyme_pattern
  rhyme_scoring
  rhyme_analysis
  rhyme_detection
  rhyme_utils
  rhyme_validation
  rhyme_lookup
  rhyme_json_types
  rhyme_json_cache
  rhyme_json_parser
  rhyme_json_io
  rhyme_json_access
  rhyme_json_fallback
  rhyme_json_loader
  rhyme_cache
  unified_rhyme_data
  rhyme_api_core
  rhyme_advanced_analysis
  unified_rhyme_api
  tone_pattern
  tone_data
  artistic_types
  poetry_standards
  artistic_evaluator_types
  artistic_evaluator_context
  artistic_evaluator_sound
  artistic_evaluator_form
  artistic_evaluator_content
  artistic_evaluator_comprehensive
  artistic_evaluator
  artistic_evaluators
  evaluation_framework
  form_evaluators
  poetry_form_dispatch
  poetry_forms_evaluation
  artistic_guidance
  artistic_evaluation
  artistic_soul_evaluation
  word_class_data
  parallelism_analysis
  rhyme_json_data_loader)
 (libraries yyocamlc_lib uutf str poetry_data yojson)
 (flags
  (:standard -warn-error -32)))
