(library
 (public_name yyocamlc.poetry)
 (name poetry)
 (modules
  ;; Phase 8.0 - 核心类型统一模块 (Issue #1096)
  poetry_core_types
  poetry_json_unified
  poetry_data_unified

  ;; Phase 7.1 - JSON处理系统整合重构模块 (最新) 
  rhyme_json_core
  rhyme_json_api

  ;; Phase 6.1 - 韵律数据统一重构模块
  consolidated_rhyme_data
  
  ;; Phase 5.1 - 新增整合模块 (优先使用)
  poetry_types_consolidated
  poetry_rhyme_core 
  poetry_rhyme_data
  poetry_artistic_core
  
  ;; Phase 5.2 - 重构模块化架构 (Alpha Agent技术债务改进)
  artistic_data_loader
  artistic_core_evaluators
  artistic_form_evaluators
  artistic_advanced_analysis
  poetry_artistic_core_refactored
  
  ;; Issue #1155 - 推荐API统一接口和整合引擎
  poetry_recommended_api
  poetry_rhyme_engine
  poetry_artistic_engine
  
  ;; 保留原有模块以确保向后兼容
  rhyme_types
  rhyme_helpers
  rhyme_data
  rhyme_database
  rhyme_matching
  rhyme_pattern
  rhyme_scoring
  rhyme_analysis
  rhyme_detection
  rhyme_utils
  rhyme_validation
  rhyme_lookup
  ;; 新增统一模块
  rhyme_json_unified
  
  ;; 保留原有JSON模块（向后兼容，已重构为使用新的核心模块）
  rhyme_json_types
  rhyme_json_cache
  rhyme_json_parser
  rhyme_json_io
  rhyme_json_access
  rhyme_json_fallback
  rhyme_json_loader
  rhyme_cache
  unified_rhyme_data
  rhyme_api_core
  rhyme_advanced_analysis
  unified_rhyme_api
  tone_pattern
  tone_data
  artistic_types
  poetry_standards
  artistic_evaluator_types
  artistic_evaluator_context
  artistic_evaluator_sound
  artistic_evaluator_form
  artistic_evaluator_content
  artistic_evaluator_comprehensive
  artistic_evaluator
  artistic_evaluators
  evaluation_framework
  form_evaluators
  poetry_form_dispatch
  poetry_forms_evaluation
  artistic_guidance
  artistic_evaluation
  artistic_soul_evaluation
  word_class_data
  parallelism_analysis)
 (libraries yyocamlc_lib uutf str poetry_data yojson utils)
 (flags
  (:standard -warn-error -32)))
