(library
 (name unicode)
 (public_name yyocamlc.unicode)
 (modules
  unicode_types
  unicode_mapping
  unicode_utils
  unicode_chars
  char_byte_definitions
  char_byte_accessors
  compatibility_core
  unicode_compatibility)
 (libraries str yojson))

(rule
 (target unicode_chars.json)
 (deps ../../data/unicode_chars.json)
 (action (copy %{deps} %{target})))
