;; 骆言编译器集成测试配置
;; Issue #1357 Token系统兼容性集成测试

; Temporarily disabled due to token system changes
; (test
;  (name test_token_compatibility_integration)
;  (modules test_token_compatibility_integration)
;  (libraries yyocamlc_lib alcotest token_system_unified_core token_system_unified_conversion)
;  (preprocess
;   (pps bisect_ppx)))
