;; 骆言Token系统整合重构测试配置 - Fix #1325

;; Token测试工具库

(library
 (name token_test_utils)
 (modules token_test_utils)
 (libraries tokens alcotest)
 (preprocess
  (pps bisect_ppx)))

;; 统一Token模块综合测试

(test
 (name test_unified_tokens_consolidated)
 (modules test_unified_tokens_consolidated)
 (libraries tokens token_test_utils alcotest)
 (preprocess
  (pps bisect_ppx)))
