;; 骆言编译器核心模块单元测试配置
;; 第二阶段：为核心模块创建单元测试 Fix #173

;; 第一阶段单元测试（已实现）
(test
 (name test_ast)
 (modules test_ast)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_parser)
 (modules test_parser)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_semantic)
 (modules test_semantic)
 (libraries yyocamlc_lib alcotest))

;; 第二阶段单元测试（高优先级核心模块）
(test
 (name test_types)
 (modules test_types)
 (libraries yyocamlc_lib alcotest))

;; 以下模块测试将在后续实现
; (test
;  (name test_lexer)
;  (modules test_lexer)
;  (libraries yyocamlc_lib alcotest))

; (test
;  (name test_codegen)
;  (modules test_codegen)
;  (libraries yyocamlc_lib alcotest))

; (test
;  (name test_c_codegen)
;  (modules test_c_codegen)
;  (libraries yyocamlc_lib alcotest))

;; 第三阶段单元测试（中优先级支持模块）
; (test
;  (name test_compiler)
;  (modules test_compiler)
;  (libraries yyocamlc_lib alcotest))

; (test
;  (name test_logger)
;  (modules test_logger)
;  (libraries yyocamlc_lib alcotest))

; (test
;  (name test_error_messages)
;  (modules test_error_messages)
;  (libraries yyocamlc_lib alcotest))

; (test
;  (name test_compiler_errors)
;  (modules test_compiler_errors)
;  (libraries yyocamlc_lib alcotest))