;; 骆言编译器核心模块单元测试配置
;; 第二阶段：为核心模块创建单元测试 Fix #173

;; 第一阶段单元测试（已实现）

(test
 (name test_ast)
 (modules test_ast)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_parser)
 (modules test_parser)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_semantic)
 (modules test_semantic)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

;; 第二阶段单元测试（高优先级核心模块）

(test
 (name test_types)
 (modules test_types)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

;; 第二阶段已实现的模块测试

(test
 (name test_lexer)
 (modules test_lexer)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_codegen)
 (modules test_codegen)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_c_codegen)
 (modules test_c_codegen)
 (libraries yyocamlc_lib alcotest str)
 (preprocess
  (pps bisect_ppx)))

;; 第三阶段单元测试（中优先级支持模块）

(test
 (name test_compiler)
 (modules test_compiler)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_logger)
 (modules test_logger)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_error_messages)
 (modules test_error_messages)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_compiler_errors)
 (modules test_compiler_errors)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

;; 第四阶段单元测试（覆盖率提升专项）

(test
 (name test_compiler_errors_enhanced)
 (modules test_compiler_errors_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_data_loader_error)
 (modules test_data_loader_error)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_unified_logger)
 (modules test_unified_logger)
 (libraries yyocamlc_lib alcotest unix)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_parser_expressions_primary)
 (modules test_parser_expressions_primary)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_base_formatter_enhanced)
 (modules test_base_formatter_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_performance_benchmark_enhanced)
 (modules test_performance_benchmark_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_token_string_converter_enhanced)
 (modules test_token_string_converter_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_formatter_tokens_enhanced)
 (modules test_formatter_tokens_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_types_convert_enhanced)
 (modules test_types_convert_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_value_operations_enhanced)
 (modules test_value_operations_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_utf8_utils_enhanced)
 (modules test_utf8_utils_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_formatter_logging_enhanced)
 (modules test_formatter_logging_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_string_processing_utils_enhanced)
 (modules test_string_processing_utils_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_core_types_enhanced)
 (modules test_core_types_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_constants_enhanced)
 (modules test_constants_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

(test
 (name test_comprehensive_coverage_boost)
 (modules test_comprehensive_coverage_boost)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))

;; Issue #1284 代码质量改进测试

(test
 (name test_conversion_registry_enhanced)
 (modules test_conversion_registry_enhanced)
 (libraries yyocamlc_lib alcotest)
 (preprocess
  (pps bisect_ppx)))
