(library
 (public_name yyocamlc.poetry.data)
 (name poetry_data)
 (modules
  word_class_types
  an_yun_data
  expanded_rhyme_data
  expanded_word_class_data
  expanded_data_loader
  poetry_json_parser
  poetry_file_reader
  poetry_data_fallback
  poetry_word_class_loader
  externalized_data_loader
  tone_data_storage
  word_class_data_storage
  word_class_data_refactored
  poetry_data_loader
  data_source_registry
  rhyme_data_loader)
 (libraries yyocamlc_lib unix rhyme_groups))
